--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.lpo.seoulnavi"
-        minSdkVersion 19
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support:design:24.2.0'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.google.android.gms:play-services-location:10.2.1'
-
+    compile 'com.squareup.retrofit2:retrofit:ㄴㄴ2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 //    testCompile 'junit:junit:4.12'
 }
