--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     // Image loader
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'jp.wasabeef:glide-transformations:1.0.6@aar'
+    compile 'jp.wasabeef:glide-transformations:2.0.1'
 
 }
